fix(css): remove horizontal scrollbar on small viewports (#63)

--- a/_sass/app/components/_footer.scss
+++ b/_sass/app/components/_footer.scss
@@ -1,5 +1,6 @@
 .c-footer {
-  padding: 50px 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
   text-align: center;
 
   @media #{$md-up} {
